--- a/HisLight.css
+++ b/HisLight.css
@@ -653,7 +653,7 @@ p{
 
 
 
-@media only screen and (max-width: 420px){
+@media only screen and (max-width: 400px){
 
     body{
         height: 650vh;
@@ -674,7 +674,8 @@ p{
 
     .StartPic{
         width: 100%;
-        height: 100%;
+        max-height: 100%;
+	display: block;
         position: absolute;
     }
 
