--- a/HisLight.css
+++ b/HisLight.css
@@ -768,6 +768,7 @@ p{
         top: 230vw;
         left: 12vw;
         width: 75vw;
+        line-height: 40px;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
