--- a/HisLight.css
+++ b/HisLight.css
@@ -983,7 +983,7 @@ p{
     }
     .Novena2A{
         font-size: 12vw;
-        left: 34vw;
+        left: 34%;
         top: 1180vw;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
