--- a/HisLight.css
+++ b/HisLight.css
@@ -953,7 +953,7 @@ p{
         left: 7%;
         top: 960vw;
         width: 85%;
-        height: 70%;
+        height: 70vw;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
@@ -999,7 +999,7 @@ p{
         left: 7%;
         top: 1200vw;
         width: 85%;
-        height: 70%;
+        height: 70vw;
         font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
