--- a/HisLight_copy.css
+++ b/HisLight_copy.css
@@ -1240,7 +1240,7 @@ p{
     .main-content .writer {
         text-transform: uppercase;
         letter-spacing: 5px;
-        color: red;
+        color: whitesmoke;
         text-align: center;
         margin-top: 20px;
         font-size: 18px;
