--- a/HisLight_copy.css
+++ b/HisLight_copy.css
@@ -9,9 +9,10 @@ html{
 }
 
 body{
-    background: rgb(38, 38, 38);
-    height: 1000vh;
+    background-image: linear-gradient(rgb(0, 71, 71), rgb(25, 0, 61));
+    height: 800vh;
     overflow: auto;
+    display: flex;
 }
 
 body::-webkit-scrollbar{
@@ -22,7 +23,6 @@ body::-webkit-scrollbar{
 body::-webkit-scrollbar-thumb{
     border-radius: 10px;
     width: 10px;
-
     background-color: #9696967e;
 }
 
@@ -38,6 +38,51 @@ body::-webkit-scrollbar-thumb{
     background-color: #1c1c1c;
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
     z-index: 0;
+}
+
+
+.navLine{
+    position: absolute;
+    width: 2.3%;
+    height: 1px;
+    top: 4.5%;
+    left: 61.5%;
+    background-color: rgb(155, 155, 155);
+    z-index: 1;
+    rotate: 90deg;
+}
+
+.navLine2{
+    position: absolute;
+    width: 2.3%;
+    height: 1px;
+    top: 4.5%;
+    left: 70.4%;
+    background-color: rgb(155, 155, 155);
+    z-index: 1;
+    rotate: 90deg;
+}
+
+.navLine3{
+    position: absolute;
+    width: 2.3%;
+    height: 1px;
+    top: 4.5%;
+    left: 78.2%;
+    background-color: rgb(155, 155, 155);
+    z-index: 1;
+    rotate: 90deg;
+}
+
+.navLine4{
+    position: absolute;
+    width: 2.3%;
+    height: 1px;
+    top: 4.5%;
+    left: 84.8%;
+    background-color: rgb(155, 155, 155);
+    z-index: 1;
+    rotate: 90deg;
 }
 
 .logo{
@@ -85,7 +130,7 @@ body::-webkit-scrollbar-thumb{
 
 .travel{
     position: absolute;
-    left: 62%;
+    left: 55%;
     top: 3%;
     z-index: 1;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -115,7 +160,7 @@ body::-webkit-scrollbar-thumb{
 
 .travel2{
     position: absolute;
-    left: 71%;
+    left: 63%;
     top: 3%;
     z-index: 1;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -128,7 +173,7 @@ body::-webkit-scrollbar-thumb{
 
 .travel4{
     position: absolute;
-    left: 81%;
+    left: 72%;
     top: 3%;
     z-index: 1;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -141,7 +186,7 @@ body::-webkit-scrollbar-thumb{
 
 .travel5{
     position: absolute;
-    left: 90%;
+    left: 80%;
     top: 3%;
     z-index: 1;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -154,12 +199,12 @@ body::-webkit-scrollbar-thumb{
 
 .travel6{
     position: absolute;
-    left: 90%;
-    top: 5%;
+    left: 86.5%;
+    top: 3%;
     z-index: 1;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     letter-spacing: 1px;
-    font-size: 170%;
+    font-size: 130%;
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
     text-decoration: none;
     color: whitesmoke;
@@ -250,14 +295,14 @@ body::-webkit-scrollbar-thumb{
     z-index: 0;
 }
 
-.verseBox{
+/* .verseBox{
     position: absolute;
     background-color: #582b2b;
     height: 100%;
     width: 100%;
     top: 100%;
     z-index: 0;
-}
+} */
 
 
 #verse {
@@ -294,9 +339,9 @@ body::-webkit-scrollbar-thumb{
     color: whitesmoke;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     letter-spacing: 3px;
-    font-size: 130%;
+    font-size: 150%;
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
-    width: 42%;
+    width: auto;
     text-align: center;
     line-height: 60px;
     z-index: 1;
@@ -341,14 +386,14 @@ textarea::placeholder{
 
 /*section3*/
 
-.saintBox{
+/* .saintBox{
     position: absolute;
     background-color: #451919;
     height: 130%;
     width: 100%;
     top: 200%;
     z-index: 0;
-}
+} */
 
 .church{
     position: absolute;
@@ -361,19 +406,19 @@ textarea::placeholder{
     border-radius: 14px;
 }
 
-/*.Section3Line{
+.Section3Line{
     position: absolute;
     width: 85%;
     height: 1px;
     top: 220%;
     left: 8%;
-    background-color: rgb(80, 80, 80);
+    background-color: rgb(155, 155, 155);
     z-index: 1;
-} */
+} 
 
 #quotes {
     position: absolute;
-    top: 230vh;
+    top: 228vh;
     left: 4%;
     position: absolute;
     color: rgb(216, 216, 216);
@@ -466,25 +511,25 @@ textarea::placeholder{
 /*FEAST DAYS SECTION 4*/
 
 
-.feastBox{
+/*.feastBox{
     position: absolute;
     background-color: #350f0f;
     height: 140%;
     width: 100%;
     top: 330%;
     z-index: 0;
-}
+} */
 
 
-/*.Section4Line{
+.Section4Line{
     position: absolute;
     width: 85%;
     height: 1px;
-    top: 352%;
+    top: 357%;
     left: 8%;
-    background-color: rgb(80, 80, 80);
+    background-color: rgb(155, 155, 155);
     z-index: 1;
-} */
+}
 
 .search{
     width: 20%;
@@ -570,15 +615,24 @@ p{
 /*SECTION5*/
 
 
-/*.Section5Line{
+.Section5Line{
     position: absolute;
     width: 85%;
     height: 1px;
-    top: 480%;
+    top: 497%;
     left: 8%;
-    background-color: rgb(80, 80, 80);
+    background-color: rgb(155, 155, 155);
     z-index: 1;
-}*/
+}
+
+.novenaBox{
+    position: absolute;
+    /*background-color: #4f1313;*/
+    height: 150%;
+    width: 100%;
+    top: 470%;
+    z-index: 0;
+}
 
 
 #MonthNov {
@@ -598,9 +652,9 @@ p{
 .novena1Pic{
     position: absolute;
     width: 50%;
-    height: 130%;
-    z-index: 0;
-    top: 500%;
+    height: 100%;
+    z-index: 1;
+    top: 250vw;
     opacity: 1;
     left: 50%;
     border-radius: 14px;
@@ -611,9 +665,9 @@ p{
 .novena2Pic{
     position: absolute;
     width: 50%;
-    height: 130%;
-    z-index: 0;
-    top: 500%;
+    height: 100%;
+    z-index: 1;
+    top: 250vw;
     left: 50%;
     border-radius: 14px;
     display: none;
@@ -623,9 +677,9 @@ p{
 .novena3Pic{
     position: absolute;
     width: 50%;
-    height: 130%;
-    z-index: 0;
-    top: 500%;
+    height: 100%;
+    z-index: 1;
+    top: 250vw;
     left: 50%;
     border-radius: 14px;
     display: none;
@@ -714,7 +768,7 @@ p{
 .Novena1 {
     position: absolute;
     top: 525vh;
-    left: 13vw;
+    left: 5vw;
     text-align: center;
     color: whitesmoke;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -819,7 +873,7 @@ p{
 .Novena2 {
     position: absolute;
     top: 525vh;
-    left: 12vw;
+    left: 4vw;
     position: absolute;
     text-align: center;
     color: whitesmoke;
@@ -1037,6 +1091,7 @@ p{
     cursor: pointer;
     opacity: 100%;
     outline: none;
+    z-index: 1;
 }
 .secondDotButton{
     width: 20px;
@@ -1049,6 +1104,7 @@ p{
     opacity: 50%;
     cursor: pointer;
     outline: none;
+    z-index: 1;
 }
 .thirdDotButton{
     width: 20px;
@@ -1061,13 +1117,23 @@ p{
     opacity: 50%;
     cursor: pointer;
     outline: none;
+    z-index: 1;
 }
+
+/* .commentaryBox{
+    position: absolute;
+    background-color: #242424;
+    height: 140%;
+    width: 100%;
+    top: 640%;
+    z-index: 0;
+} */
 
 #Commentary {
     position: absolute;
-    top: 620vh;
+    top: 615vh;
     left: 27%;
-    color: rgb(216, 216, 216);
+    color: rgb(231, 231, 231);
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     letter-spacing: 3px;
     font-size: 400%;
@@ -1077,17 +1143,263 @@ p{
 }
 
 .wine{
-    width: 40%;
-    height: 40%;
-    border-radius: 5px;
-    top: 650vh;
-    left: 60vh;
+    width: 25%;
+    height: 35%;
+    border-radius: 12px;
+    top: 320vw;
+    left: 5vw;
     position: absolute;
+    z-index: 1;
+    transition: 1s ease;
+    cursor: pointer;
+}
+
+.hoverEffect:hover{
+    opacity: 1;
+}
+
+.hoverEffect{
+    width: 25%;
+    height: 35%;
+    top: 320vw;
+    left: 5vw;
+    position: absolute;
+    z-index: 1;
+    transition: 0.7s ease-in-out;
+    border-radius: 12px;
+    backdrop-filter: blur(2px);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.weddingText{
+    font-size: 40px;
+    top: 20%;
+    left: 10%;
+    line-height: 70px;
+    text-align: center;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
+}
+
+.feeding5000{
+    width: 25%;
+    height: 35%;
+    border-radius: 12px;
+    top: 320vw;
+    left: 35vw;
+    position: absolute;
+    z-index: 1;
+    transition: 1s ease;
+    cursor: pointer;
 }
 
 
 
+.hoverEffect5000:hover{
+    opacity: 1;
+}
 
+.hoverEffect5000{
+    width: 25%;
+    height: 35%;
+    top: 320vw;
+    left: 35vw;
+    position: absolute;
+    z-index: 1;
+    transition: 0.7s ease-in-out;
+    border-radius: 12px;
+    backdrop-filter: blur(2px);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.feedingText{
+    font-size: 40px;
+    top: 20%;
+    left: 6%;
+    line-height: 70px;
+    text-align: center;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
+}
+
+
+
+.bartimaeus{
+    width: 25%;
+    height: 35%;
+    border-radius: 12px;
+    top: 320vw;
+    left: 65vw;
+    position: absolute;
+    z-index: 1;
+    transition: 1s ease;
+}
+
+
+
+.hoverEffectbart:hover{
+    opacity: 1;
+}
+
+.hoverEffectbart{
+    width: 25%;
+    height: 35%;
+    top: 320vw;
+    left: 65vw;
+    position: absolute;
+    z-index: 1;
+    transition: 0.7s ease-in-out;
+    border-radius: 12px;
+    backdrop-filter: blur(2px);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.bartText{
+    font-size: 40px;
+    top: 20%;
+    left: 12%;
+    line-height: 70px;
+    text-align: center;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
+}
+
+.womanAtWell{
+    width: 25%;
+    height: 35%;
+    border-radius: 12px;
+    top: 345vw;
+    left: 65vw;
+    position: absolute;
+    z-index: 1;
+    transition: 1s ease;
+}
+
+
+.hoverEffectWell:hover{
+    opacity: 1;
+}
+
+.hoverEffectWell{
+    width: 25%;
+    height: 35%;
+    top: 345vw;
+    left: 65vw;
+    position: absolute;
+    z-index: 1;
+    transition: 0.7s ease-in-out;
+    border-radius: 12px;
+    backdrop-filter: blur(2px);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.wellText{
+    font-size: 35px;
+    top: 20%;
+    left: 10%;
+    line-height: 70px;
+    text-align: center;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
+}
+
+.lastSupper{
+    width: 25%;
+    height: 35%;
+    border-radius: 12px;
+    top: 345vw;
+    left: 35vw;
+    position: absolute;
+    z-index: 1;
+    transition: 1s ease;
+}
+
+
+.hoverEffectSupper:hover{
+    opacity: 1;
+}
+
+.hoverEffectSupper{
+    width: 25%;
+    height: 35%;
+    top: 345vw;
+    left: 35vw;
+    position: absolute;
+    z-index: 1;
+    transition: 0.7s ease-in-out;
+    border-radius: 12px;
+    backdrop-filter: blur(2px);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.supperText{
+    font-size: 35px;
+    top: 20%;
+    left: 12%;
+    line-height: 70px;
+    text-align: center;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
+}
+
+.lazurus{
+    width: 25%;
+    height: 35%;
+    border-radius: 12px;
+    top: 345vw;
+    left: 5vw;
+    position: absolute;
+    z-index: 1;
+    transition: 1s ease;
+}
+
+
+.hoverEffectLazurus:hover{
+    opacity: 1;
+}
+
+.hoverEffectLazurus{
+    width: 25%;
+    height: 35%;
+    top: 345vw;
+    left: 5vw;
+    position: absolute;
+    z-index: 1;
+    transition: 0.7s ease-in-out;
+    border-radius: 12px;
+    backdrop-filter: blur(2px);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.lazurusText{
+    font-size: 35px;
+    top: 20%;
+    left: 16%;
+    line-height: 70px;
+    text-align: center;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.536));
+}
+
+.Wave1{
+    top: 302vw;
+    width: 100%;
+    position: absolute;
+    z-index: 0;
+    fill: #32247691;
+}
 
 
 @media only screen and (max-width: 400px){
@@ -1095,34 +1407,51 @@ p{
     body{
         height: 550vh;
         font-family:Georgia, 'Times New Roman', Times, serif;
+        height: 1300vw;
     }
 
-    .verseBox{
+    .navLine{
+        display: none;
+    }
+
+    .navLine2{
+        display: none;
+    }
+
+    .navLine3{
+        display: none;
+    }
+
+    .navLine4{
+        display: none;
+    }
+
+    /* .verseBox{
         position: absolute;
         background-color: #582b2b;
         height: 150vw;
         width: 100vw;
         top: 175vw;
         z-index: 0;
-    }
+    } */
 
-    .saintBox{
+    /* .saintBox{
         position: absolute;
         background-color: #451919;
         height: 160vw;
         width: 100vw;
         top: 365vw;
         z-index: 0;
-    }
+    } */
 
-    .feastBox{
+    /* .feastBox{
         position: absolute;
         background-color: #350f0f;
         height: 272vw;
         width: 100vw;
         top: 550vw;
         z-index: 0;
-    }
+    } */
 
     .Title{
         text-align: center;
@@ -1146,6 +1475,7 @@ p{
         position: absolute;
         height: 180vw;
         object-fit: cover;
+        border-radius: 2px;
     }
 
     .Section2Line{
@@ -1160,6 +1490,7 @@ p{
         object-fit: cover;
         top: 300vw;
         left: 0vw;
+        border-radius: 2px;
     }
 
     #verse {
@@ -1202,6 +1533,7 @@ p{
         object-fit: cover;
         top: 520vw;
         left: 0vw;
+        border-radius: 2px;
     }
 
     .Section3Line{
@@ -1277,6 +1609,7 @@ p{
         left: 0vw;
         top: 720vw;
         object-fit: cover;
+        border-radius: 2px;
     }
 
     .DateButton{
@@ -1335,6 +1668,7 @@ p{
         filter: brightness(0.7);
         position: absolute;
         z-index: 0;
+        border-radius: 2px;
     }
 
     .Novena1{
@@ -1388,6 +1722,7 @@ p{
         filter: brightness(0.7);
         position: absolute;
         z-index: 0;
+        border-radius: 2px;
     }
 
     .Novena2{
@@ -1442,6 +1777,7 @@ p{
         filter: brightness(0.7);
         position: absolute;
         z-index: 0;
+        border-radius: 2px;
     }
 
     .Novena3{
@@ -1556,6 +1892,51 @@ p{
     .travel5{
         display: none;
     }
+
+    .travel6{
+        display: none;
+    }
+
+
+    #Commentary{
+        font-size: 7vw;
+        left: 4.5vw;
+        top: 1100vw;
+    }
+
+    .wine{
+        width: 75%;
+        height: 30%;
+        border-radius: 12px;
+        top: 1130vw;
+        left: 10vw;
+        position: absolute;
+        z-index: 1;
+        transition: 1s ease;
+        cursor: pointer;
+        filter: blur(1px);
+    }
+
+    .hoverEffect{
+        opacity: 1;
+        z-index: 2;
+        width: 80%;
+        left: 0vw;
+    }
+
+    .weddingText{
+        font-size: 25px;
+        top: 830vw;
+        left: 20%;
+        line-height: 50px;
+        text-align: center;
+        position: absolute;
+        color: rgb(255, 255, 255);
+        filter: drop-shadow(4px 4px 4px rgb(0, 0, 0));
+        z-index: 2;
+        opacity: 1;
+    }
+
 
     /* dropdown Button */
  .dropbtn {
